--- a/抄写.html
+++ b/抄写.html
@@ -17,9 +17,16 @@
         <br>
         <img src="tu.jpg" alt="加载失败" width="390" height="293">
         <hr><hr>
-        <p>piao</p>
+        <marquee direction="left">piao</marquee>
         <p>这几种强调<strong>有什么</strong> <b>区别？</b> <u>这个？</u> <i>这个？</i></p>
         <p>&lt;!-- 这段注释需要出现在页面里面 --></p>
+        <pre>
+            <code>
+    function a() {
+    return 8
+    }
+            </code>
+        </pre>
         <hr>
         <ul>
             <li>小学
@@ -106,12 +113,52 @@
 
         </form>
         <hr>
+        <table border="1">
+            <col>
+            <col bgcolor="red">
+            <thead>
+                <tr>
+                    <th>编号</th>
+                    <th>品名</th>
+                    <th>进价</th>
+                    <th>出价</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td><strong>aaa</strong></td>
+                    <td>a</td>
+                    <td rowspan="2">a</td>
+                    <td>a</td>
+                </tr>
+                <tr>
+                    <td><strong>a</strong></td>
+                    <td>a</td>
+                    <td>a</td>
+                </tr>
+                <tr>
+                    <td><strong>a</strong></td>
+                    <td>a</td>
+                    <td>a</td>
+                    <td>a</td>
+                </tr>
+                <tr>
+                    <td><strong>a</strong></td>
+                    <td>a</td>
+                    <td>a</td>
+                    <td>a</td>
+                </tr>
+            </tbody>
+        </table>
         <hr>
         <br>
         <hr>
-        <a href="https://www.mi.com/" target="_self">小米</a>
-        <p>aaa   bbbb</p>
-        <p>aaa   bbbb</p>
+        <a href="https://www.mi.com/" target="aaaa">小米</a><br>
+        <iframe src="https://nodejs.org/en" frameborder="1" name="aaaa"></iframe>
+        
+        <p>aaa &nbsp;&nbsp;&nbsp;bbbbb</p>
+        <pre>aaa      bbbbb
+        </pre>
 
         <p id="a123">>>>>>>>>>>>>>>>>>>>>>><<<<<<<<<<<<<<<<<<< &lt;span>&lt;/span></p>
     </body>
