--- a/css-font-text-practise.html
+++ b/css-font-text-practise.html
@@ -12,11 +12,12 @@
       
     }
     h1{
-      text-shadow:3px 3px #808080;
+      text-shadow:1px 1px #808080,2px 2px #808080,3px 3px #808080,4px 4px #808080;
     }
     h3{
       font-size:60px;
-      color: red;
+      text-shadow: 0px 0px 1px red,0px 0px 1px red,0px 0px 1px red,0px 0px 1px red,0px 0px 1px red,0px 0px 1px red,0px 0px 1px red,0px 0px 1px red,0px 0px 1px red;
+      color: white;
     }
     .b{
       font-size: 30px;
