--- a/css-block-horizontal-practise.html
+++ b/css-block-horizontal-practise.html
@@ -35,6 +35,7 @@
         .e p{
             border: 5px solid #ff00ff;
             border-style: dashed solid dotted dotted;
+            width: 50%;
             margin:auto;
         }
         .e{
