--- a/oald-layout-block.example.html
+++ b/oald-layout-block.example.html
@@ -70,6 +70,10 @@
             box-sizing: border-box;
             overflow: auto;
         }
+        .b2 dt{
+            margin: 15px;
+            margin-top: 40px;
+        }
         ul li{
             list-style: none;
         }
