--- a/oald-layout-block.example2.html
+++ b/oald-layout-block.example2.html
@@ -20,6 +20,9 @@
         }
         .a{
             position: absolute;
+            a{
+                text-decoration: none;
+            }
         }
         .a h2{
             position: relative;
