--- a/oald-layout-block.example.html
+++ b/oald-layout-block.example.html
@@ -24,6 +24,9 @@
             height: 100%;
             box-shadow: inset 10000px 10000px pink;
             overflow: hidden;
+            a{
+                text-decoration: none;
+            }
         }
         .a h2{
             text-align: right;
