--- a/noi.html
+++ b/noi.html
@@ -120,7 +120,7 @@
     console.log(a * b)
 </script>
 
-<script type="ok" id="ch0103/">
+<script type="ok" id="ch0103/20">
     var a = Number(prompt("输入值1"))
     console.log(2 ** a)
 </script>
