--- a/noi.html
+++ b/noi.html
@@ -11,30 +11,32 @@
     console.log((a+b)*c)
 </script>
 
-<script type="k" id="ch0103/03">
+<script type="ok" id="ch0103/03">
     var a = Number(prompt("输入值1"))
     var b = Number(prompt("输入值2"))
     var c = Number(prompt("输入值3"))
-    console.log((a+b)/c)
+    console.log(Math.ceil((a+b)/c))
 </script>
 
-<script type="k" id="ch0103/04">
+<script type="ok" id="ch0103/04">
     var a = Number(prompt("输入值1"))
     var b = Number(prompt("输入值2"))
-    console.log(a/b)
+    console.log(Math.trunc(a/b))
     console.log(a%b)
 </script>
 
-<script type="k" id="ch0103/05">
+<script type="ok" id="ch0103/05">
     var a = Number(prompt("输入值1"))
     var b = Number(prompt("输入值2"))
-    console.log(a/b)
+    var c =a/b
+    console.log(c.toFixed(9))
 </script>
 
-<script type="k" id="ch0103/06">
+<script type="ok" id="ch0103/06">
     var a = Number(prompt("输入值1"))
     var b = Number(prompt("输入值2"))
-    console.log((b/a)*100 + '%')
+    var c =(b/a)*100
+    console.log(c.toFixed(3)+ '%')
 </script>
 
 <script type="k" id="ch0103/07">
@@ -47,63 +49,95 @@
     console.log(a*(x**3) + b*(x**2) + c*x + d)
 </script>
 
-<script type="k" id="ch0103/08">
+<script type="ok" id="ch0103/08">
     var a = Number(prompt("输入温度"))
-    console.log(5*(a-32)/9)
+    var c = 5*(a-32)/9
+    console.log(c.toFixed(5))
 </script>
 
-<script type="k" id="ch0103/09">
+<script type="ok" id="ch0103/09">
     var r = Number(prompt("输入半径"))
     var pi = 3.14159
-    console.log(2*r)
-    console.log(2*r*pi)
-    console.log(r*r*pi)
+    var c1 = 2*r
+    var c2 = 2*r*pi
+    var c3 = r*r*pi
+    console.log(c1.toFixed(4))
+    console.log(c2.toFixed(4))
+    console.log(c3.toFixed(4))
 </script>
 
-<script type="k" id="ch0103/10">
+<script type="ok" id="ch0103/10">
     var r1 = Number(prompt("输入电阻1"))
     var r2 = Number(prompt("输入电阻2"))
-    console.log(1/(1/r1 + 1/r2))
+    var c = 1/(1/r1 + 1/r2)
+    var a = Number(c.toFixed(2))
+    console.log(a)
 </script>
 
-<script type="k" id="ch0103/11">
+<script type="ok" id="ch0103/11">
     var a = Number(prompt("输入值1"))
     var b = Number(prompt("输入值2"))
-    console.log(a%b)
+    var c = a%b
+    console.log(c.toFixed(4))
 </script>
 
-<script type="k" id="ch0103/12">
+<script type="ok" id="ch0103/12">
     var r = Number(prompt("输入半径"))
     var pi = 3.14
-    console.log(4/3*pi*(r**3))
+    var c = 4/3*pi*(r**3)
+    console.log(c.toFixed(2))
 </script>
 
-<script type="x" id="ch0103/13">
-    var a = Number(prompt("输入值1"))
-    console.log()
+<script type="ok" id="ch0103/13">
+    var a = Number(prompt("输入值1"))//100
+    var ge = a%10
+    var bai = (a/100)-((a/100)%1)
+    var shi = (a-(bai*100)-ge)/10
+    
+    console.log(''+ ge + shi + bai)
 </script>
 
-<script type="k" id="ch0103/14">
+<script type="ok" id="ch0103/14">
     var h = Number(prompt("输入深度"))
     var r = Number(prompt("输入半径"))
     var pi = 3.14159
-    console.log(20/((pi*r*r*h)/1000))
+    var c = 20/((pi*r*r*h)/1000)
+    console.log(Math.ceil(c))
 </script>
 
-<script type="k" id="ch0103/15">
+<script type="ok" id="ch0103/15">
     var n = Number(prompt("输入值1"))
     var x = Number(prompt("输入值2"))
     var y = Number(prompt("输入值3"))
-    
-    console.log(10-y/x)
+    var c = 10-y/x
+    console.log(Math.floor(c))
 </script>
 
-<script type="x" id="ch0103/16">
+<script type="ok" id="ch0103/16">
+    var x1 = Number(prompt("输入值x1"))
+    var y1 = Number(prompt("输入值y1"))
+    var x2 = Number(prompt("输入值x2"))
+    var y2 = Number(prompt("输入值y2"))
 
+    var c = ((x1 - x2) **2 + (y1 - y2) **2)**0.5
+    console.log(c.toFixed(3))
 </script>
 
-<script type="x" id="ch0103/17">
+<script type="" id="ch0103/17">
+    var x1 = Number(prompt("输入值x1"))
+    var y1 = Number(prompt("输入值y1"))
+    var x2 = Number(prompt("输入值x2"))
+    var y2 = Number(prompt("输入值y2"))
+    var x3 = Number(prompt("输入值x3"))
+    var y3 = Number(prompt("输入值y3"))
 
+    var a = ((x1 - x2) **2 + (y1 - y2) **2)**0.5
+    var b = ((x2 - x3) **2 + (y2 - y3) **2)**0.5
+    var c = ((x3 - x1) **2 + (y3 - y1) **2)**0.5
+
+    var p =1/2 * (a+b+c)
+    var s =(p * (p-a)*(p-b)*(p-c))**0.5
+    console.log(s.toFixed(2))
 </script>
 
 <script type="ok" id="ch0103/18">
