--- a/noi.html
+++ b/noi.html
@@ -15,7 +15,7 @@
     var a = Number(prompt("输入值1"))
     var b = Number(prompt("输入值2"))
     var c = Number(prompt("输入值3"))
-    console.log(Math.ceil((a+b)/c))
+    console.log(Math.floor((a+b)/c))
 </script>
 
 <script type="ok" id="ch0103/04">
@@ -123,7 +123,7 @@
     console.log(c.toFixed(3))
 </script>
 
-<script type="" id="ch0103/17">
+<script type="ok" id="ch0103/17">
     var x1 = Number(prompt("输入值x1"))
     var y1 = Number(prompt("输入值y1"))
     var x2 = Number(prompt("输入值x2"))
