--- a/noi.html
+++ b/noi.html
@@ -39,7 +39,7 @@
     console.log(c.toFixed(3)+ '%')
 </script>
 
-<script type="k" id="ch0103/07">
+<script type="ok" id="ch0103/07">
     var x = Number(prompt("输入值x"))
     var a = Number(prompt("输入值1"))
     var b = Number(prompt("输入值2"))
@@ -158,3 +158,277 @@
     var a = Number(prompt("输入值1"))
     console.log(2 ** a)
 </script>
+
+<script type="ok" id="ch0104/01">
+    var a = Number(prompt("输入值1"))
+    if(a > 0){
+        console.log("positive")
+    }else if(a == 0){
+        console.log("zero")
+    }else{
+        console.log("negative")
+    }
+</script>
+
+<script type="ok" id="ch0104/02">
+    var a = Number(prompt("输入值1"))
+    if(a > 0){
+        console.log(a)
+    }else{
+        console.log(-a)
+    }
+</script>
+
+<script type="ok" id="ch0104/03">
+    var a = Number(prompt("输入值1"))
+    if(a%2==0){
+        console.log("even")
+    }else{
+        console.log("odd")
+    }
+</script>
+
+<script type="x" id="ch0104/04">
+
+</script>
+
+<script type="ok" id="ch0104/05">
+var a = Number(prompt("输入值1"))
+var b = Number(prompt("输入值2"))
+
+if(a>b){
+    console.log(">")
+}else if(a == b){
+    console.log("=")
+}else(
+    console.log("<")
+)
+</script>
+
+<script type="ok" id="ch0104/06">
+var a = Number(prompt("输入值1"))
+
+if(a>=10 && a<100){
+    console.log("1")
+}else(
+    console.log("0")
+)
+</script>
+
+<script type="ok" id="ch0104/07">
+var a = Number(prompt("输入值1"))
+var b = Number(prompt("输入值2"))
+
+if(a>=10 || b>=20){
+    console.log(1)
+}else{
+    console.log(0)
+}
+</script>
+
+<script type="ok" id="ch0104/08">
+var a = Number(prompt("输入值1"))
+
+if(a%3==0 && a%5==0){
+    console.log("YES")
+}else{
+    console.log("NO")
+}
+</script>
+
+<script type="ok" id="ch0104/09">
+var a = Number(prompt("输入值1"))
+var x = "" 
+
+if(a%3==0){
+    x = x + "3"
+}
+if(a%5==0){
+    x = x + " 5"
+}
+if(a%7==0){
+    x = x + " 7"
+}
+
+console.log(x)
+</script>
+
+<script type="ok" id="ch0104/10">
+var a = Number(prompt("输入值1"))
+var b = Number(prompt("输入值2"))
+
+if(a<60 && b>=60){
+    console.log(1)
+}else if(a>=60 && b<60){
+    console.log(1)
+}else{
+    console.log(0)
+}
+</script>
+
+<script type="ok" id="ch0104/11">
+var a = Number(prompt("输入值1"))
+
+if(a==1 || a==3 || a==5){
+    console.log("YES")
+}else{
+    console.log("NO")
+}
+</script>
+
+<script type="ok" id="ch0104/12">
+var a = Number(prompt("输入值1"))
+var w = a/1.2
+var b = a/3 + 27 + 23
+
+if(b<w){
+    console.log("Bike")
+}else if(b==c){
+    console.log("All")
+}else{
+    console.log("Walk")
+}
+</script>
+
+<script type="ok" id="ch0104/13">
+var x = Number(prompt("输入值1"))
+var y = 0
+if(x<5){
+    y = -x+2.5
+}
+if(x>=5 && x<10){
+    y = 2-1.5*(x-3)*(x-3)
+}
+if(x>=10 && x<20){
+    y = x/2-1.5
+}
+console.log(y.toFixed(3))
+</script>
+
+<script type="ok" id="ch0104/14">
+var a = Number(prompt("输入值1"))
+var b = prompt("输入值2")
+var c = 0
+
+if(b=="y"){
+    c = c + 5
+}
+if(a<=1000){
+    c = c + 8
+}
+if(a>1000){
+    var d = a-1000 
+    c = c+8
+    if(d>500){
+        d = d/500 
+        var d1 = Math.ceil(d)
+        c = c + 4*d1
+    }else{
+        c = c+4
+    }
+    
+}
+console.log(c)
+</script>
+
+<script type="ok" id="ch0104/15">
+var a = Number(prompt("输入值1"))
+var b = Number(prompt("输入值2"))
+var c = Number(prompt("输入值3"))
+var d = 0
+
+if(a > b){
+    d = a
+}else{
+    d = b
+}
+if(d<c){
+    d = c
+}  
+console.log(d)
+
+</script>
+
+<script type="ok" id="ch0104/16">
+var a = Number(prompt("输入值1"))
+var b = Number(prompt("输入值2"))
+var c = Number(prompt("输入值3"))
+
+if(c*c == (a*a+b*b)){
+    console.log("yes")
+}else{
+    console.log("no")
+}
+</script>
+
+<script type="ok" id="ch0104/17">
+var a = Number(prompt("输入值1"))
+
+if(a%4==0){
+    if(a%100==0 && a%400==0){
+        console.log("Y")
+    }else{
+        console.log("N")
+    }
+}else{
+        console.log("N")
+}
+</script>
+
+<script type="ok" id="ch0104/18">
+var a = Number(prompt("输入值1"))
+var b = Number(prompt("输入值2"))
+
+if(a>0 && a<=1){
+    a = "yes"
+}else if(a<=0 && -a<=1){
+    a = "yes"
+}else{
+    a = "no"
+}
+if(b>0 && b<=1){
+    b = "yes"
+}else if(b<=0 && -b<=1){
+    b = "yes"
+}else{
+    b = "no"
+}
+if(a=="yes" && b=="yes"){
+    console.log("yes")
+}else{
+    console.log("no")
+}
+</script>
+
+<script type="ok" id="ch0104/19">
+var a = Number(prompt("输入值1"))
+var b = Number(prompt("输入值2"))
+var c = prompt("输入值3")
+
+if(c=="+"){
+    console.log(a+b)
+}
+if(c=="-"){
+    console.log(a-b)
+}
+if(c=="*"){
+    console.log(a*b)
+}
+if(c=="/"){
+    console.log(a/b)
+}
+</script>
+
+<script type="" id="ch0104/20">
+
+</script>
+
+<script type="ok" id="ch0104/21">
+var a = Number(prompt("输入值1"))
+var b = Number(prompt("输入值2"))
+var c = Number(prompt("输入值3"))
+
+var d =Math.ceil(c/b)
+console.log(a-d)
+</script>
+
