面向對象改2

--- a/面向對象.html
+++ b/面向對象.html
@@ -27,6 +27,8 @@
         Vector.prototype.length = function(){            
             return Math.sqrt(this.x * this.x,this.y * this.y)
         }
+
+        
     </script>
     <script type="複數">
         function Complex(x,y){
@@ -124,7 +126,7 @@
         // a.set('foo', 3)
     </script>
 
-    <script type="">
+    <script type="鏈錶">
         class LinkedList{
             constructor(){
                 this.head = null
